# flask-exile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PixelBot.spec  README.md  USER_GUIDE.md  build.ps1  build_installer.ps1  build_standalone.ps1  cleanup.ps1  kill-ports.ps1  pyproject.toml  requirements-build.txt  start-dev.bat  start-dev.ps1  start-dev.py  start.bat  start.ps1
backend/: app.py  config.py  config_loader.py  desktop_picker.py  pixel_monitor.py  pixelbot_config.example.ini  requirements.txt
backend/bot/: __init__.py  image_matcher.py  pixel_detector.py  screen_capture.py  text_reader.py
backend/models/: __init__.py  monitor.py
backend/routes/: __init__.py  monitor_routes.py  picker_routes.py  pixel_routes.py  screen_routes.py
backend/services/: __init__.py  monitor_service.py  monitoring_loop.py  persistence_service.py
backend/static/: app.js  dashboard.html  style.css
backend/static/components/: ActivityLog.js  AppContainer.js  AppHeader.js  MonitorModal.js  MonitorsList.js  QuickActions.js  Statistics.js
backend/static/components/shared/: ActionButtons.js  ColorPreview.js  FormGroup.js  PixelDisplay.js
backend/static/services/: api.js  socket.js  validation.js
backend/websocket/: __init__.py  events.py
pixelbot/: __init__.py  __main__.py  launcher.py
